--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -98,7 +98,7 @@
 					<th>Date de la Commande <button class="btn btn-link p-0 border-0 sortButton"
 							title="Trier par Date de la Commande"><i class="fas fa-sort"></i></button></th>
 					<th>Statut de la Requête <button class="btn btn-link p-0 border-0 sortButton"
-						title="Trier par Statut de la requête"><i class="fas fa-sort"></i></button></th>
+							title="Trier par Statut de la requête"><i class="fas fa-sort"></i></button></th>
 					<th>Statut de Livraison <button class="btn btn-link p-0 border-0 sortButton"
 							title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
 					<th>Actions</th>
@@ -246,4 +246,29 @@
 			</tbody>
 		</table>
 	</div>
+
+	<!-- Modal for Checking Availability -->
+	<div class="modal fade" id="availabilityModal" tabindex="-1" aria-labelledby="availabilityModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="availabilityModalLabel">Vérifier la disponibilité</h5>
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form id="checkAvailabilityForm">
+						<div class="mb-3">
+							<label for="equipmentInput" class="form-label">Nom de l'équipement</label>
+							<input type="text" class="form-control" id="equipmentInput">
+						</div>
+						<button type="submit" class="btn btn-primary">Vérifier</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
