поменял названия полей в таблице equipment

--- a/germax-frontend/src/templates/components/content-page-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-equipment-management/index.html
@@ -128,12 +128,12 @@
 										<textarea class="form-control d-none edit-mode" name="equipment-description"></textarea>
 									</td>
 									<td>
-										<span class="equipment-availability view-mode">Non disponible</span>
+										<span class="equipment-availability view-mode">En réparation</span>
 										<input type="text" class="form-control d-none edit-mode" name="equipment-availability"
 											value="Non disponible">
 										<select class="form-select edit-mode d-none" name="equipment-availability">
 											<option value="Disponible">Disponible</option>
-											<option value="Non disponible">Non disponible</option>
+											<option value="En réparation">En réparation</option>
 										</select>
 									</td>
 									<td>
@@ -180,7 +180,7 @@
 											value="Disponible">
 										<select class="form-select edit-mode d-none" name="equipment-availability">
 											<option value="Disponible">Disponible</option>
-											<option value="Non disponible">Non disponible</option>
+											<option value="En réparation">En réparation</option>
 										</select>
 									</td>
 									<td>
