--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -99,7 +99,7 @@
 							title="Trier par Date de la Commande"><i class="fas fa-sort"></i></button></th>
 					<th>Statut de la Requête <button class="btn btn-link p-0 border-0 sortButton"
 							title="Trier par Statut de la requête"><i class="fas fa-sort"></i></button></th>
-					<th>Statut de Livraison <button class="btn btn-link p-0 border-0 sortButton"
+					<th>Statut de l'équipement <button class="btn btn-link p-0 border-0 sortButton"
 							title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
 					<th>Actions</th>
 				</tr>
