--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -6,16 +6,16 @@
 		<div class="collapse navbar-collapse justify-content-end" id="horizontalNavbar">
 			<!-- генерация вертикального меню -->
 		</div>
-		<div id="modalPlace">
+		<div id="notificationsModalPlace">
 		</div>
-		<div id="modalSupport">
+		<div id="supportModal">
 		</div>
 	</nav>
 	 <!-- Контейнер для вкладок, расположенный прямо под навигацией -->
     <!-- Здесь будет разметка вкладок -->
   </div>
 
-	<div class="row">
+	<div class="row g-0">
 		<div class="col-md-3">
 			<div class="list-group">
 				<!-- вертикальное меню слева -->
