--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -8,7 +8,7 @@
 		</div>
 		<div id="notificationsModalPlace">
 		</div>
-		<div id="supportModal">
+		<div id="supportModalContainer">
 		</div>
 	</nav>
 	 <!-- Контейнер для вкладок, расположенный прямо под навигацией -->
