feat: requestNotFoundItemsModal created
inserted a requestNotFoundItemsModal and set the function

--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -35,57 +35,7 @@
 		<hr class="my-4">
 		<p>Ici, vous pouvez rapidement et facilement envoyer une demande de location de l'équipement nécessaire au
 			gestionnaire de l'entrepôt.</p>
-		<a class="btn btn-primary btn-sm" id="loansRequest" href="#">Aller au formulaire</a>
-	</div>
-</div>
-
-
-
-
-
-<div class="modal fade show" id="loanFormModal" tabindex="-1" aria-labelledby="loanFormModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-lg">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="loanFormModalLabel">Demande du matériel non trouvé</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<form>
-					<div class="mb-3">
-						<label for="equipmentCategory" class="form-label">Catégorie du matériel</label>
-						<select class="form-select" id="equipmentCategory">
-							<option>Ordinateurs portables</option>
-							<option>Ecrans d'ordinateurs</option>
-							<option>Smartphones/option>
-							<option>Accessoires</option>
-							<option>Tablettes</option>
-							<option>Casques-VR</option>
-						</select>
-					</div>
-					<div class="mb-3">
-						<label for="modelInput" class="form-label">Commencez à rentrer le nom du modèle</label>
-						<input type="text" class="form-control" id="modelInput" placeholder="Rentrez le nom du modèle">
-					</div>
-					<div class="mb-3">
-						<label for="quantity" class="form-label">Quantité</label>
-						<input type="number" class="form-control" id="quantity" placeholder="1">
-					</div>
-					<div class="mb-3">
-						<label for="rentalDates" class="form-label">Dates de location</label>
-						<input type="text" class="form-control" id="rentalDates" placeholder="с 01.01.2024 по 10.01.2024">
-					</div>
-					<div class="mb-3">
-						<label for="comments" class="form-label">Commentaires</label>
-						<textarea class="form-control" id="comments" rows="3"></textarea>
-					</div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-				<button type="submit" class="btn btn-primary">Envoyer la requête</button>
-			</div>
-		</div>
+		<a class="btn btn-primary btn-sm" id="request-button" href="#" data-bs-target="#requestNotFoundItemsModal">Aller au formulaire</a>
 	</div>
 </div>
 
@@ -121,6 +71,56 @@
 					<button type="submit" class="btn btn-primary" id="confirmRentalButton">Confirmer la demande</button>
 				</div>
 			</form>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade show" id="requestNotFoundItemsModal" tabindex="-1" aria-labelledby="requestNotFoundItemsModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="requestNotFoundItemsModalLabel">Demande du matériel non trouvé</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="mb-3">
+						<label for="equipmentCategory" class="form-label">Catégorie du matériel</label>
+						<select class="form-select" id="equipmentCategory">
+							<option>Ordinateurs portables</option>
+							<option>Ecrans d'ordinateurs</option>
+							<option>Smartphones</option>
+							<option>Accessoires</option>
+							<option>Tablettes</option>
+							<option>Casques-VR</option>
+						</select>
+					</div>
+					<div class="mb-3">
+						<label for="modelInput" class="form-label">Commencez à rentrer le nom du modèle</label>
+						<input type="text" class="form-control" id="modelInput" placeholder="Rentrez le nom du modèle">
+					</div>
+					<div class="mb-3">
+						<label for="quantity" class="form-label">Quantité</label>
+						<input type="number" class="form-control" id="quantity" placeholder="1">
+					</div>
+					<div class="mb-3">
+						<label for="dateRequestStart" class="form-label">Date de début</label>
+						<input type="date" name="dateStart" class="form-control" id="dateRequestStart" required="true">
+					</div>
+					<div class="mb-3">
+						<label for="dateRequestEnd" class="form-label">Date de fin</label>
+						<input type="date" name="dateRequestEnd" class="form-control" id="dateEnd" required="true">
+					</div>
+					<div class="mb-3">
+						<label for="comments" class="form-label">Commentaires</label>
+						<textarea class="form-control" id="comments" rows="3"></textarea>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+				<button type="submit" class="btn btn-primary">Envoyer la requête</button>
+			</div>
 		</div>
 	</div>
 </div>
