--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -1,11 +1,65 @@
 <div class="container mt-4">
 	<h1 class="mb-3">Gestion des demandes de réservations</h1>
 
+	<div class="mb-3">
+		<!-- Фильтры -->
+		<div class="row g-3">
+			<div class="col-md-4">
+				<select multiple class="form-select" id="filterUser">
+					<option selected>Tous les utilisateurs</option>
+					<option value="teachers">Enseignants</option>
+					<option value="students">Etudiants</option>
+					<option value="stockmen">Magasiniers</option>
+					<option value="managers">Managers</option>
+					<!-- Добавьте другие опции динамически -->
+				</select>
+			</div>
+			<div class="col-md-4">
+				<select multiple class="form-select" id="filterEquipment">
+					<option selected>Tous les équipements</option>
+					<option value="laptop">Laptop</option>
+					<option value="computer_monitor">Computer Monitor</option>
+					<option value="smartphone">Smartphone</option>
+					<option value="accessory">Accessory</option>
+					<option value="tablet">Tablet</option>
+					<option value="VR_headset">VR Headset</option>
+					<!-- Добавьте другие опции динамически -->
+				</select>
+			</div>
+			<div class="col-md-4">
+				<select multiple class="form-select" id="filterStatus">
+					<option selected>Tous les statuts</option>
+					<option>Actif</option>
+					<option>En attente</option>
+					<option>Annulé</option>
+					<!-- Добавьте другие опции динамически -->
+				</select>
+			</div>
+		</div>
+	</div>
+
+	<div class="filter-section mb-4">
+		<form class="form-inline">
+			<!-- Фильтры по датам, если необходимо -->
+			<div class="form-group mb-2 mr-2">
+				<label for="startDate" class="sr-only">Date de début</label>
+				<input type="date" class="form-control" id="startDate" placeholder="Date de début">
+			</div>
+			<div class="form-group mb-2 mr-2">
+				<label for="endDate" class="sr-only">Date de fin</label>
+				<input type="date" class="form-control" id="endDate" placeholder="Date de fin">
+			</div>
+			<button type="submit" class="btn btn-primary mb-2">Filtrer</button>
+		</form>
+	</div>
+
 	<div class="nav nav-tabs" id="equipmentTabs" role="tablist">
 		<a class="nav-link active" id="active-booking-tab" data-bs-toggle="tab" href="#activeEquipment" role="tab"
-			aria-controls="activeEquipment" aria-selected="true">Réservations à gérer</a>
-		<a class="nav-link" id="archive-booking-tab" data-bs-toggle="tab" href="#archiveEquipment" role="tab"
-			aria-controls="archiveEquipment" aria-selected="false">Réservations cachées</a>
+			aria-controls="activeEquipment" aria-selected="true">Gérer les réservations </a>
+		<a class="nav-link" id="processed-booking-tab" data-bs-toggle="tab" href="#processedEquipmentRequest" role="tab"
+			aria-controls="processedEquipmentRequest" aria-selected="false">Réservations traitées</a>
+		<a class="nav-link" id="future-booking-tab" data-bs-toggle="tab" href="#futureBookings" role="tab"
+			aria-controls="futureBookings" aria-selected="false">Futures réservations</a>
 	</div>
 
 	<!-- Содержимое вкладок -->
@@ -17,7 +71,11 @@
 					<table class="table table-hover" id="booking-table">
 						<thead>
 							<tr>
-								<th>ID de l'équipement<button class="btn btn-link p-0 border-0" id="sortById"><i class="fas fa-sort"></i></button>
+								<th data-column="id" data-type="number">ID Réservation <button
+									class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button>
+								</th>
+								<th>ID de l'équipement<button class="btn btn-link p-0 border-0" id="sortById"><i
+											class="fas fa-sort"></i></button>
 								</th>
 								<th>Nom du locataire</th>
 								<th>Modèle à louer<button class="btn btn-link p-0 border-0" id="sortByName"
@@ -26,6 +84,8 @@
 								<th>Dates désirées</th>
 								<th>Commentaire laissé</th>
 								<th>Statut de la réservation actuel</th>
+								<th>Etat du matériel <button class="btn btn-link p-0 border-0 sortButton"
+									title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
 								<th>Actions</th>
 							</tr>
 						</thead>
@@ -33,12 +93,14 @@
 							<!-- Предположим, что это оборудование с ID 1 -->
 							<tr data-booking-id="1">
 								<td>1</td>
+								<td>1</td>
 								<td>John Doe</td>
 								<td>Ordinateur portable</td>
 								<td>1</td>
 								<td>Date1</td>
 								<td>Pour les cours, pas pour jouer</td>
-								<td>Attribué au demandeur</td>
+								<td>A traiter</td>
+								<td>Bon état</td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-secondary dropdown-toggle" type="button" id="actionMenu1"
@@ -49,11 +111,13 @@
 											<li><a class="dropdown-item" href="#">Voir l'équipement</a></li>
 											<li><a class="dropdown-item" href="#">Voir le locataire</a></li>
 											<li><a class="dropdown-item" href="#">Gérer la location</a></li>
+											<li><a class="dropdown-item" href="#">Modifier les données</a></li>
 										</ul>
 									</div>
 								</td>
 							</tr>
 							<tr data-booking-id="2">
+								<td>2</td>
 								<td>2</td>
 								<td>Jane Smith</td>
 								<td>Imprimante 3D</td>
@@ -61,6 +125,7 @@
 								<td>Date2</td>
 								<td>Juste pour une semaine. Il faut vite</td>
 								<td>Refusé</td>
+								<td>Bon état</td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-secondary dropdown-toggle" type="button" id="actionMenu2"
@@ -71,11 +136,13 @@
 											<li><a class="dropdown-item" href="#">Voir l'équipement</a></li>
 											<li><a class="dropdown-item" href="#">Voir le locataire</a></li>
 											<li><a class="dropdown-item" href="#">Gérer la location</a></li>
+											<li><a class="dropdown-item" href="#">Modifier les données</a></li>
 										</ul>
 									</div>
 								</td>
 							</tr>
 							<tr data-booking-id="3">
+								<td>3</td>
 								<td>3</td>
 								<td>Emily Johnson</td>
 								<td>Scanner de documents</td>
@@ -83,6 +150,7 @@
 								<td>Date3</td>
 								<td>Il faut m'expliquer comment l'utiliser</td>
 								<td>Accepté</td>
+								<td>Bon état</td>
 								<td>
 									<div class="dropdown">
 										<button class="btn btn-secondary dropdown-toggle" type="button" id="actionMenu3"
@@ -93,6 +161,7 @@
 											<li><a class="dropdown-item" href="#">Voir l'équipement</a></li>
 											<li><a class="dropdown-item" href="#">Voir le locataire</a></li>
 											<li><a class="dropdown-item" href="#">Gérer la location</a></li>
+											<li><a class="dropdown-item" href="#">Modifier les données</a></li>
 										</ul>
 									</div>
 								</td>
@@ -104,10 +173,10 @@
 		</div>
 
 		<!-- Вкладка Архив -->
-		<div class="tab-pane fade" id="archiveEquipment" role="tabpanel" aria-labelledby="archive-booking-tab">
+		<div class="tab-pane fade" id="processedEquipmentRequest" role="tabpanel" aria-labelledby="processed-booking-tab">
 			<div class="row">
 				<div class="col-12">
-					<table class="table table-hover" id="archive-booking-table">
+					<table class="table table-hover" id="processed-booking-table">
 						<thead>
 							<tr>
 								<th>ID<button class="btn btn-link p-0 border-0" id="sortById"><i class="fas fa-sort"></i></button>
@@ -120,30 +189,151 @@
 							</tr>
 						</thead>
 						<tbody>
-							<!-- Здесь будет размещаться список архивированного оборудования с возможностью восстановления -->
+
 						</tbody>
 					</table>
 				</div>
 			</div>
 		</div>
+
+		<!-- future-reservations-->
+
+		<div class="tab-pane fade show active" id="futureBookings" role="tabpanel" aria-labelledby="future-bookings-tab">
+			<div class="row">
+				<div class="col-12">
+					<table class="table table-hover" id="booking-table">
+						<thead>
+							<tr>
+								<th data-column="id" data-type="number">ID Réservation <button
+									class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button>
+								</th>
+								<th>ID de l'équipement<button class="btn btn-link p-0 border-0" id="sortById"><i
+											class="fas fa-sort"></i></button>
+								</th>
+								<th>Nom du locataire</th>
+								<th>Modèle à louer<button class="btn btn-link p-0 border-0" id="sortByName"
+										style="text-decoration: none; color: black;"><i class="fas fa-sort"></i></button></th>
+								<th>Quantité</th>
+								<th>Dates désirées</th>
+								<th>Commentaire laissé</th>
+								<th>Statut de la réservation actuel</th>
+								<th>Etat du matériel <button class="btn btn-link p-0 border-0 sortButton"
+									title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
+								<th>Actions</th>
+							</tr>
+						</thead>
+						<tbody>
+							<!-- Предположим, что это оборудование с ID 1 -->
+							<tr data-booking-id="1">
+								<td>1</td>
+								<td>1</td>
+								<td>John Doe</td>
+								<td>Ordinateur portable</td>
+								<td>1</td>
+								<td>Date1</td>
+								<td>Pour les cours, pas pour jouer</td>
+								<td>A traiter</td>
+								<td>Bon état</td>
+								<td>
+									<div class="dropdown">
+										<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+											data-bs-toggle="dropdown" aria-expanded="false">
+											Choisir une action
+										</button>
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+											<li>
+												<a class="dropdown-item verify-booking-action" href="#">Vérifier une réservation existante pour ce matériel</a>
+												<!-- будет искать сначала во вкладке 'future résérvation'. во вкладке arrivant à échéance -->
+											</li>
+											<li>
+												<a class="dropdown-item verify-booking-action" href="#">Vérifier une réservation arrivant à échéance</a>
+												<!-- будет искать сначала во вкладке 'arrivant à échéance' -->
+											</li>
+											<li>
+												<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+													data-bs-target="#detailsModal">Voir les détails</a>
+											</li>
+											<li>
+												<a class="dropdown-item inform-state-action" href="#">Informer sur le changement d'état du matériel </a>
+												<!-- для stockman. По умолачнию Bon état. Будет возможность  -->
+											</li>
+										</ul>
+									</div>
+								</td>
+							</tr>
+							<tr data-booking-id="2">
+								<td>2</td>
+								<td>2</td>
+								<td>Jane Smith</td>
+								<td>Imprimante 3D</td>
+								<td>2</td>
+								<td>Date2</td>
+								<td>Juste pour une semaine. Il faut vite</td>
+								<td>Refusé</td>
+								<td>Bon état</td>
+								<td>
+									<div class="dropdown">
+										<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+											data-bs-toggle="dropdown" aria-expanded="false">
+											Choisir une action
+										</button>
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+											<li>
+												<a class="dropdown-item inform-state-action" href="#">Informer l'état du matériel </a>
+												<!-- для manager -->
+											</li>
+											<li>
+												<a class="dropdown-item mark-as-send-action" href="#">Former l'ordre</a>
+												<!-- в таблицу equipment orders -->
+											</li>
+											<li>
+												<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+													data-bs-target="#detailsModal">Voir les détails</a>
+											</li>
+										</ul>
+									</div>
+								</td>
+							</tr>
+							<tr data-booking-id="3">
+								<td>3</td>
+								<td>3</td>
+								<td>Emily Johnson</td>
+								<td>Scanner de documents</td>
+								<td>1</td>
+								<td>Date3</td>
+								<td>Il faut m'expliquer comment l'utiliser</td>
+								<td>Accepté</td>
+								<td>Bon état</td>
+								<td>
+									<div class="dropdown">
+										<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+											data-bs-toggle="dropdown" aria-expanded="false">
+											Choisir une action
+										</button>
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+											<li>
+												<a class="dropdown-item inform-state-action" href="#">Informer l'état du matériel </a>
+												<!-- для manager, для будущих -->
+											</li>
+											<li>
+												<a class="dropdown-item mark-as-send-action" href="#">Former l'ordre</a>
+												<!-- в таблицу equipment orders, для будущих -->
+											</li>
+											<li>
+												<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+													data-bs-target="#detailsModal">Voir les détails</a>
+												<!-- в таблицу equipment orders, для будущих и подходящих к сроку. для подходящих к сроку узнать о состоянии -->
+											</li>
+										</ul>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+
 	</div>
 
-</div>
-
-<div class="modal fade" id="rentalManagementModal" tabindex="-1" aria-labelledby="rentalManagementModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="rentalManagementModalLabel">Gérer la location</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Choisissez une action pour cette location:
-        <div class="d-grid gap-2">
-          <button class="btn btn-success" id="approveRentalButton">Approuver la demande</button>
-          <button class="btn btn-danger" id="cancelRentalButton">Annuler la demande</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
