--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -417,3 +417,19 @@
 		</div>
 	</div>
 </div>
+
+<!-- Modal для подтверждения отправки оборудования-->
+<div class="modal fade" id="confirmReceivingModal" tabindex="-1" aria-labelledby="confirmReceivingModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="confirmReceivingModalLabel">Confirmer la réception</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p>En appuyant "confirmer" vous confirmez que vous avez récéptionné l'équipement.</p>
+				<button type="button" class="btn btn-primary" id="confirmReceivingItemButton">Confirmer</button>
+			</div>
+		</div>
+	</div>
+</div>
